--- a/donate.html
+++ b/donate.html
@@ -17,6 +17,7 @@
             <h1>ERGO41</h1>
             <nav>
                 <ul>
+                    <li><a href="index.html">Home</a></li> <!-- Link alla home -->
                     <li><a href="about.html">Chi Siamo</a></li>
                     <li><a href="benefits.html">Vantaggi</a></li>
                     <li><a href="donate.html">Dona</a></li>
