--- a/donate.html
+++ b/donate.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MillionErg - Ergo</title>
-    <link rel="stylesheet" href="donate.css"> <!-- Modificato per includere il CSS specifico -->
+    <link rel="stylesheet" href="styles.css"> <!-- Include il CSS generale -->
+    <link rel="stylesheet" href="donate.css"> <!-- Include il CSS specifico per la pagina donate -->
 </head>
-<body class="donate-page"> <!-- Aggiunto classe donate-page -->
-    <!-- Logo Section -->
-    <header class="header">
-        <a href="https://ibb.co/k3xWtBZ"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" border="0" class="logo"></a>
+<body>
+    <!-- Header del sito -->
+    <header>
+        <div class="container">
+            <div class="logo-container">
+                <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
+                    <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
+                </a>
+            </div>
+            <h1>ERGO41</h1>
+            <nav>
+                <ul>
+                    <li><a href="about.html">Chi Siamo</a></li>
+                    <li><a href="benefits.html">Vantaggi</a></li>
+                    <li><a href="donate.html">Dona</a></li>
+                    <li><a href="contact.html">Contatti</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <!-- Main Content -->
+    <!-- Contenuto principale della pagina donate -->
     <div class="container">
         <h1>MillionErg</h1>
         <h2>Contribuisci al progetto e aiutaci a creare un milionario!</h2>
@@ -35,7 +51,7 @@
         </div>
     </div>
 
-    <!-- Footer Section -->
+    <!-- Footer della pagina -->
     <footer class="footer">
         <p>© 2024 MillionErg </p>
         <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
