--- a/donate.html
+++ b/donate.html
@@ -31,7 +31,7 @@
     <!-- Contenuto principale della pagina donate -->
     <div class="container">
         <h1>MillionErg</h1>
-        <h2>Contribuisci al progetto e aiutaci a creare un milionario!</h2>
+        <h2>Contribuisci al progetto e creiamo un milionario insieme!</h2>
         <p>La prima pagina di Crowdfunding basata su smart contract Ergo in Italia</p>
 
         <div class="input-container">
