--- a/donate.html
+++ b/donate.html
@@ -31,7 +31,7 @@
     <!-- Contenuto principale della pagina donate -->
     <div class="container">
         <h1>MillionErg</h1>
-        <h2>Contribuisci al progetto e creiamo un milionario insieme!</h2>
+        <h2>Contribuisci al progetto e aiutaci a creare un milionario!</h2>
         <p>La prima pagina di Crowdfunding basata su smart contract Ergo in Italia</p>
 
         <div class="input-container">
@@ -53,7 +53,7 @@
 
     <!-- Footer della pagina -->
     <footer class="footer">
-        <p>© 2024 MillionErg </p>
+        <p>© 2024 MillionErg</p>
         <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
     </footer>
 
