--- a/donate.html
+++ b/donate.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MillionErg - Ergo</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Include il CSS generale -->
-    <link rel="stylesheet" href="donate.css"> <!-- Include il CSS specifico per la pagina donate -->
+    <title>Dona - ERGO41</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="donate.css"> <!-- Collega il CSS specifico per la pagina donate -->
 </head>
 <body>
-    <!-- Header del sito -->
-    <header>
+    <!-- Header Section -->
+    <header class="header">
         <div class="container">
             <div class="logo-container">
                 <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <!-- Contenuto principale della pagina donate -->
+    <!-- Main Content -->
     <div class="container">
         <h1>MillionErg</h1>
         <h2>Contribuisci al progetto e aiutaci a creare un milionario!</h2>
@@ -51,9 +51,9 @@
         </div>
     </div>
 
-    <!-- Footer della pagina -->
+    <!-- Footer Section -->
     <footer class="footer">
-        <p>© 2024 MillionErg</p>
+        <p>© 2024 MillionErg </p>
         <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
     </footer>
 
