--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Header Section -->
-    <header class="header">
+    <header>
         <div class="container">
             <div class="logo-container">
                 <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Footer Section -->
-    <footer class="footer">
+    <footer>
         <p>© 2024 MillionErg </p>
         <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
     </footer>
