--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contatti - ERGO41</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Dona - ERGO41</title>
+    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="donate.css"> <!-- CSS specifico per la pagina donate -->
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <div class="container">
             <div class="logo-container">
@@ -17,7 +19,6 @@
             <h1>ERGO41</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li> <!-- Link alla home -->
                     <li><a href="about.html">Chi Siamo</a></li>
                     <li><a href="benefits.html">Vantaggi</a></li>
                     <li><a href="donate.html">Dona</a></li>
@@ -27,29 +28,36 @@
         </div>
     </header>
 
-    <section>
-        <div class="container">
-            <h2>Contattaci</h2>
-            <p>Hai domande? Vuoi saperne di più su ERGO41? Contattaci tramite il modulo qui sotto:</p>
-            <form action="#" method="post">
-                <label for="name">Il Tuo Nome:</label>
-                <input type="text" id="name" name="name" required>
+    <!-- Main Content -->
+    <div class="container">
+        <h1>MillionErg</h1>
+        <h2>Contribuisci al progetto e aiutaci a creare un milionario!</h2>
+        <p>La prima pagina di Crowdfunding basata su smart contract Ergo in Italia</p>
 
-                <label for="email">La Tua Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Il Tuo Messaggio:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit" class="btn">Invia Messaggio</button>
-            </form>
+        <div class="input-container">
+            <input id="amount" type="number" placeholder="Inserisci l'importo in ERG" min="1">
+            <button onclick="sendContribution()">Contribuisci</button>
         </div>
-    </section>
 
+        <div id="status" class="status">
+            Stato della campagna: <span id="campaignStatus">Caricamento...</span>
+        </div>
+        
+        <div class="goal-info">
+            <p>Fondi raccolti: <span id="raisedAmount">0</span> ERG</p>
+            <p>Obiettivo minimo: <span id="minGoal">1000</span> ERG</p>
+            <p>Blocco corrente: <span id="currentHeight">Caricamento...</span></p>
+            <p>Deadline: <span id="deadline">Caricamento...</span></p>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
     <footer>
-        <div class="container">
-            <p>&copy; 2024 ERGO41. Tutti i Diritti Riservati.</p>
-        </div>
+        <p>© 2024 MillionErg </p>
+        <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/ergo-lib-wasm-browser/ergo_lib_wasm.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
