--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERGO41 - Costruire un Mondo Decentralizzato</title>
+    <title>ERGO4ONE - Costruire un Mondo Decentralizzato</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
     <section id="about">
         <div class="container">
             <h2>Cosa è ERGO41</h2>
-            <p>ERGO41 è una cooperativa decentralizzata DAO che permette alle comunità di distribuire equamente le risorse. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
+            <p>ERGO41 è una DAO che permette alle comunità di utilizzare equamente le risorse e ridistribuire i crediti. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
 
@@ -80,7 +80,7 @@
     <!-- Sezione Contatti -->
     <section id="contact">
         <div class="container">
-            <h2>Contatta ERGO41</h2>
+            <h2>Contatta ERGO4ONE</h2>
             <button id="expand-contact-btn" class="btn">Mostra il modulo di contatto</button>
             <div id="contact-form-container" class="expandable-container">
                 <form action="#" method="post">
@@ -110,7 +110,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 ERGO41. Tutti i Diritti Riservati.</p>
+            <p>&copy; 2024 ERGO4ONE. Tutti i Diritti Riservati.</p>
         </div>
     </footer>
 </body>
