--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
                 </a>
             </div>
-            <h1>ERGO41</h1>
+            <h1>ERGO4ONE</h1>
             <nav>
                 <ul>
                     <li><a href="about.html">Chi Siamo</a></li>
@@ -38,7 +38,7 @@
     <!-- Sezione Chi Siamo -->
     <section id="about">
         <div class="container">
-            <h2>Cosa è ERGO41</h2>
+            <h2>Cosa è ERGO4ONE</h2>
             <p>ERGO41 è una DAO che permette alle comunità di utilizzare equamente le risorse e ridistribuire i crediti. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
