--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="about">
         <div class="container">
             <h2>Cosa è ERGO4ONE</h2>
-            <p>ERGO41 è una DAO che permette alle comunità di utilizzare equamente le risorse e ridistribuire i crediti. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
+            <p>ERGO4ONE è una DAO che permette alle comunità di utilizzare equamente le risorse e ridistribuire i crediti automaticamente. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
 
