--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
                 </a>
             </div>
-            <h1>ERGO4ONE</h1>
+            <h1>MillionErg</h1>
             <nav>
                 <ul>
                     <li><a href="about.html">Chi Siamo</a></li>
