--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Sezione Hero -->
     <section id="hero">
         <div class="container">
-            <h1>Costruire un Mondo Decentralizzato con ERGO41</h1>
+            <h1>Costruire un Mondo Decentralizzato con MillionErg</h1>
             <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
             <a href="#donate" class="btn">Unisciti al Movimento</a>
         </div>
@@ -40,6 +40,9 @@
         <div class="container">
             <h2>Cosa è ERGO4ONE</h2>
             <p>ERGO4ONE è una DAO che permette alle comunità di utilizzare equamente le risorse e ridistribuire i crediti automaticamente. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
+            <h2>Cosa è MillionErg</h2>
+            <p>MILLIONERG</p>
+
         </div>
     </section>
 
