--- a/collaborate.html
+++ b/collaborate.html
@@ -32,18 +32,19 @@
     <!-- Main Content -->
     <div class="container">
         <h1>Collabora con Noi</h1>
-        <p>Sei un appassionato di ERGO e vuoi contribuire al nostro progetto? Ecco come puoi aiutarci:</p>
+        <p>Sei un'associazione senza scopo di lucro e desideri utilizzare il nostro servizio? ERGO41 offre una soluzione decentralizzata, trasparente e automatica per aiutarti a distribuire token di partecipazione e gestire il ritiro di beni essenziali come cibo, bevande, primo soccorso ed educazione.</p>
         
-        <h2>Opportunità di Collaborazione</h2>
+        <h2>Perché Collaborare con Noi?</h2>
+        <p>Il nostro sistema ti consente di:</p>
         <ul>
-            <li><strong>Programmazione:</strong> Contribuisci con il tuo know-how nello sviluppo di smart contract e applicazioni basate su ERGO.</li>
-            <li><strong>Design:</strong> Aiutaci a migliorare l'aspetto visivo del nostro sito e delle nostre applicazioni.</li>
-            <li><strong>Marketing:</strong> Supportaci nella promozione del progetto e nella creazione di una comunità attiva.</li>
-            <li><strong>Educazione:</strong> Condividi le tue conoscenze attraverso articoli, video o webinar.</li>
+            <li><strong>Distribuire Token di Partecipazione:</strong> Rendi le tue attività più coinvolgenti, consentendo ai partecipanti di ricevere token che possono essere utilizzati per vari benefici.</li>
+            <li><strong>Ritirare Merci:</strong> Gestisci il ritiro di beni come cibo, bevande e materiali didattici in modo semplice e trasparente.</li>
+            <li><strong>Automazione dei Processi:</strong> Riduci il carico di lavoro grazie a un sistema automatizzato che semplifica la distribuzione e la gestione dei beni.</li>
+            <li><strong>Massima Trasparenza:</strong> Rendi il tuo operato chiaro e visibile, aumentando la fiducia nella tua associazione.</li>
         </ul>
 
-        <h2>Contattaci</h2>
-        <p>Se sei interessato a collaborare con noi, inviaci un'email a <a href="mailto:info@ergo41.org">info@ergo41.org</a>.</p>
+        <h2>Contattaci per Maggiori Informazioni</h2>
+        <p>Se sei interessato a scoprire come il nostro servizio può aiutare la tua associazione, inviaci un'email a <a href="mailto:info@ergo41.org">info@ergo41.org</a>.</p>
 
         <h2>Seguici sui Social Media</h2>
         <p>Rimani aggiornato sulle ultime novità e sulle opportunità di collaborazione seguendo i nostri profili sui social media:</p>
