--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
     </section>
 
     <!-- Sezione Dona -->
-    <section id="donate">
-        <div class="container">
-            <h2>Sostieni la Nostra Missione</h2>
-            <p>Aiuta a costruire un'economia decentralizzata ed equa donando token Ergo (ERG). Ogni contributo dà potere agli individui e alle piccole imprese.</p>
-            <a href="#" class="btn">Dona ERG Ora</a>
-        </div>
-    </section>
+<section id="donate">
+    <div class="container">
+        <h2>Sostieni la Nostra Missione</h2>
+        <p>Aiuta a costruire un'economia decentralizzata ed equa donando token Ergo (ERG). Ogni contributo dà potere agli individui e alle piccole imprese.</p>
+        
+        <a href="donate.html" class="btn">Dona ERG Ora</a>
+    </div>
+</section>
 
     <!-- Sezione Contatti -->
     <section id="contact">
