--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     </header>
 
     <!-- Sezione Hero -->
-    <section id="hero">
-        <div class="container">
-            <h1>Costruire un Mondo Decentralizzato con MillionErg</h1>
-            <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
-            <a href="#donate" class="btn">Unisciti al Movimento</a>
-        </div>
-    </section>
+<section id="hero">
+    <div class="container">
+        <h1>Costruire un Mondo Decentralizzato con MillionErg</h1>
+        <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
+        <a href="https://t.me/millionerg24" class="btn" target="_blank" rel="noopener noreferrer">Unisciti al Movimento</a>
+    </div>
+</section>
 
     <!-- Sezione Chi Siamo -->
     <section id="about">
