--- a/donate.html
+++ b/donate.html
@@ -3,68 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dona - ERGO41</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Collega il CSS principale -->
+    <title>MillionErg Crowdfunding</title>
+
+    <!-- Link Bootstrap CSS for responsive design -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    
+    <!-- Custom CSS for additional styling -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            padding: 20px;
+            margin-top: 20px;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        header .logo {
+            width: 150px;
+        }
+        .input-container {
+            margin-top: 20px;
+        }
+        .status {
+            margin-top: 20px;
+        }
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+        }
+        @media (max-width: 768px) {
+            .goal-info {
+                text-align: center;
+            }
+        }
+    </style>
 </head>
+
 <body>
     <!-- Header Section -->
     <header>
         <div class="container">
-            <div class="logo-container">
-                <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
-                    <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
-                </a>
-            </div>
-            <h1>ERGO41</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">Chi Siamo</a></li>
-                    <li><a href="benefits.html">Vantaggi</a></li>
-                    <li><a href="donate.html">Dona</a></li>
-                    <li><a href="contact.html">Contatti</a></li>
-                </ul>
-            </nav>
+            <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
+            <h1>MillionErg Crowdfunding</h1>
+            <p class="lead">Aiuta a creare un milionario con la blockchain di Ergo!</p>
         </div>
     </header>
 
     <!-- Main Content -->
     <div class="container">
-        <h1>MillionErg</h1>
-        <h2>Contribuisci al progetto e aiutaci a creare un milionario!</h2>
-        <p>La prima pagina di Crowdfunding basata su smart contract Ergo in Italia</p>
+        <h2 class="text-center">Contribuisci al progetto</h2>
+        <p class="text-center">Obiettivo della campagna: 50.000 ERG</p>
 
-        <div class="input-container">
-            <input id="amount" type="number" placeholder="Inserisci l'importo in ERG" min="1">
-            <button onclick="sendContribution()">Contribuisci</button>
-            <button onclick="closeCampaign()">Chiudi Campagna</button> <!-- New button for manual closure -->
+        <div class="input-container text-center">
+            <input id="amount" type="number" class="form-control w-50 d-inline-block" placeholder="Inserisci l'importo in ERG" min="1">
+            <button class="btn btn-primary" onclick="sendContribution()">Contribuisci</button>
+            <button class="btn btn-danger" onclick="finalizeCampaign()">Finalizza Campagna</button> <!-- Button to finalize campaign -->
         </div>
 
-        <div id="status" class="status">
-            Stato della campagna: <span id="campaignStatus">Caricamento...</span>
+        <div id="status" class="status text-center mt-3">
+            <h5>Stato della campagna: <span id="campaignStatus">Caricamento...</span></h5>
         </div>
         
-        <div class="goal-info">
+        <div class="goal-info text-center mt-4">
             <p>Fondi raccolti: <span id="raisedAmount">0</span> ERG</p>
-            <p>Obiettivo minimo: <span id="minGoal">1000</span> ERG</p>
+            <p>Obiettivo minimo: <span id="minGoal">50000</span> ERG</p>
             <p>Blocco corrente: <span id="currentHeight">Caricamento...</span></p>
         </div>
     </div>
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2024 MillionErg</p>
-        <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
+        <p>© 2024 MillionErg - Crowdfunding basato su Ergo</p>
+        <a href="https://ergoplatform.org" target="_blank" style="color:white;">Learn more about Ergo</a>
     </footer>
 
-    <!-- Inclusione dello script solo per donate.html -->
+    <!-- Inclusione del SDK di Ergo -->
     <script src="https://cdn.jsdelivr.net/npm/ergo-lib-wasm-browser/ergo_lib_wasm.js"></script>
-    <script>
-        let minToRaise = 1000000000; // 1000 ERG in nanoERG
-        let raisedAmount = 0;        // Totale raccolto
-        let currentHeight = 0;       // Altezza corrente del blocco
 
-        // Inizializzazione Ergo SDK e wallet
+    <!-- Custom Script -->
+    <script>
+        const minToRaise = 50000000000; // 50,000 ERG in nanoERG
+        let raisedAmount = 0;        // Total funds raised
+        let currentHeight = 0;       // Current blockchain height
+
+        // Inizializza Ergo SDK e wallet
         async function loadErgo() {
             await ergoConnector.nautilus.connect();
             const address = await ergoConnector.nautilus.getContext().get_change_address();
@@ -80,11 +113,9 @@
             currentHeight = heightData.total - 1; // Blocco corrente
             document.getElementById('currentHeight').textContent = currentHeight;
 
-            // Aggiorna i fondi raccolti (potrebbe essere recuperato dal contratto intelligente in un'app reale)
             document.getElementById('raisedAmount').textContent = (raisedAmount / 1e9).toFixed(2);
             document.getElementById('minGoal').textContent = (minToRaise / 1e9).toFixed(2);
 
-            // Controlla lo stato della campagna
             const campaignStatus = document.getElementById('campaignStatus');
             if (raisedAmount >= minToRaise) {
                 campaignStatus.textContent = 'Successo (obiettivo raggiunto)';
@@ -97,78 +128,84 @@
         async function sendContribution() {
             const amountInput = document.getElementById('amount');
             const amount = parseFloat(amountInput.value) * 1e9; // Converti ERG in nanoERG
+            const chosenAddress = prompt('Inserisci l\'indirizzo per la donazione del 10%');
 
-            if (isNaN(amount) || amount <= 0) {
-                alert('Inserisci un importo valido.');
+            if (isNaN(amount) || amount <= 0 || !chosenAddress) {
+                alert('Inserisci un importo valido e un indirizzo per la donazione.');
                 return;
             }
 
-            // Ottieni contesto dal wallet connesso
             const ctx = await ergoConnector.nautilus.getContext();
-
-            // Costruzione di una transazione
             const changeAddr = await ctx.get_change_address();
-            const utxos = await ctx.get_utxos(amount); // Ottieni UTXO sufficienti per coprire l'importo
+            const utxos = await ctx.get_utxos(amount);
 
             const tx = await ctx.sign_tx({
                 inputs: utxos,
-                dataInputs: [],
                 outputs: [
                     {
                         value: amount,
-                        address: "indirizzo_smart_contract", // L'indirizzo del contratto smart
-                        additionalRegisters: {}
+                        address: "indirizzo_smart_contract",
+                        additionalRegisters: { R8: chosenAddress }
                     }
                 ],
-                fee: 1000000, // 0.001 ERG di fee
+                fee: 1000000,
                 changeAddress: changeAddr
             });
 
-            // Invia la transazione alla rete Ergo
             const txId = await ctx.submit_tx(tx);
             console.log("ID transazione inviata:", txId);
 
-            raisedAmount += amount; // Aggiorna il totale raccolto
-            updateCampaignStatus(); // Aggiorna lo stato della campagna
-            amountInput.value = ''; // Resetta l'input
+            raisedAmount += amount;
+            updateCampaignStatus();
+            amountInput.value = ''; 
             alert(`Hai contribuito con ${(amount / 1e9).toFixed(2)} ERG!`);
         }
 
-        // Funzione per chiudere manualmente la campagna
-        async function closeCampaign() {
-            // Ottieni contesto dal wallet connesso
-            const ctx = await ergoConnector.nautilus.getContext();
+        // Finalizza la campagna
+        async function finalizeCampaign() {
+            if (raisedAmount < minToRaise) {
+                alert('L\'obiettivo non è stato ancora raggiunto.');
+                return;
+            }
 
-            // Costruzione di una transazione per chiudere la campagna
+            const contributors = ["indirizzo1", "indirizzo2", "indirizzo3"];
+            const randomContributor = contributors[Math.floor(Math.random() * contributors.length)];
+
+            const totalRaised = raisedAmount;
+            const randomContributorPayout = totalRaised * 0.75;
+            const e41Payout = totalRaised * 0.15;
+            const chosenPayout = totalRaised * 0.10;
+
+            const ctx = await ergoConnector.nautilus.getContext();
             const changeAddr = await ctx.get_change_address();
-            const utxos = await ctx.get_utxos(1000000); // Ottieni UTXO per coprire la fee
+            const utxos = await ctx.get_utxos(1000000);
 
             const tx = await ctx.sign_tx({
                 inputs: utxos,
-                dataInputs: [],
                 outputs: [
-                    {
-                        value: 1000000, // Solo fee per chiudere la campagna
-                        address: changeAddr, // Restituisce al proprietario
-                        additionalRegisters: {}
-                    }
+                    { value: randomContributorPayout, address: randomContributor },
+                    { value: e41Payout, address: "indirizzo_e41" },
+                    { value: chosenPayout, address: chosenAddress }
                 ],
-                fee: 1000000, // 0.001 ERG di fee
+                fee: 1000000,
                 changeAddress: changeAddr
             });
 
-            // Invia la transazione alla rete Ergo
             const txId = await ctx.submit_tx(tx);
-            console.log("ID transazione di chiusura inviata:", txId);
+            console.log("ID transazione finale inviata:", txId);
 
-            alert('La campagna è stata chiusa manualmente.');
+            alert('La campagna è stata completata con successo!');
         }
 
-        // Carica lo stato della campagna al caricamento della pagina
+        // Aggiorna lo stato della campagna al caricamento della pagina
         document.addEventListener('DOMContentLoaded', async function () {
             await loadErgo();
             updateCampaignStatus();
         });
     </script>
+
+    <!-- Link Bootstrap JS (for better responsiveness) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
